Android: Add support to generation of aab package
This patch adds the Android.sdk packageType property which sets the target application.
By default (previous behavior) qbs generates an apk package. When set to aab, qbs generates
instead an aab package

Change-Id: Ic09776d08e2a2ecd68fb4c08881201a7a0a25240
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,14 +64,21 @@ jobs:
         - docker-compose run --rm bionic scripts/run-analyzer.sh
 
     - <<: *build-on-bionic
-      name: With Qbs and with Qt for Android
+      name: With Qbs and with Qt 5.13 for Android
       before_install:
         - docker-compose pull bionic
         - docker-compose pull bionic-android-513
-        - docker-compose pull bionic-android-514
       script:
         - docker-compose run bionic qbs build modules.cpp.compilerWrapper:ccache modules.qbsbuildconfig.enableBundledQt:true config:release
         - docker-compose run bionic-android-513 scripts/test-qt-for-android.sh release/install-root/usr/local/bin
+
+    - <<: *build-on-bionic
+      name: With Qbs and with Qt 5.14 for Android
+      before_install:
+        - docker-compose pull bionic
+        - docker-compose pull bionic-android-514
+      script:
+        - docker-compose run bionic qbs build modules.cpp.compilerWrapper:ccache modules.qbsbuildconfig.enableBundledQt:true config:release
         - docker-compose run bionic-android-514 scripts/test-qt-for-android.sh release/install-root/usr/local/bin
 
     - &build-on-macos
