Add support for Cap'n Proto for the c++ language
Cap'n Proto is a 'cerialization protocol' similar to protobuf:
https://capnproto.org/index.html

This patch mainly focuses on the c++ support for the capnp protocol
keeping in mind the possibility to add other languages later.

Change-Id: Ib19a9df1f45f2787503197791ac597d06cc45e9d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ jobs:
       addons:
         homebrew:
           packages:
+            - capnp
             - ccache
             - grpc
             - icoutils
