travis: install cap'n'proto packages in Bionic image
This allows to run capnproto tests on Linux

Change-Id: I1c500063f13f4aecc16c088f91d3ce790c750abf
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/bionic/Dockerfile
+++ b/docker/bionic/Dockerfile
@@ -38,6 +38,7 @@ RUN apt-get update -qq && \
         bison \
         build-essential \
         ca-certificates \
+        capnproto \
         ccache \
         clang-8 \
         clang-tidy-8 \
@@ -46,6 +47,7 @@ RUN apt-get update -qq && \
         git \
         help2man \
         icoutils \
+        libcapnp-dev \
         libdbus-1-3 \
         libfreetype6 \
         libfontconfig1 \
