Initial CMake port
This change allows to build Qbs using CMake build tool

Tested platforms
- Linux (gcc)
- macOS (clang)
- Windows (msvc2017)

Missing features (compared to Qbs build)
- Documentation build
- Bundled QtScript support
- Static build
- .pc file for qbscore
- qbs module for qbscore

Change-Id: I09b5dadd6723d5a47e5ef2a9a38d3300488718f2
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,11 @@ jobs:
         - docker-compose run bionic scripts/build-qbs-with-qbs.sh
 
     - <<: *build-on-bionic
+      name: With CMake on Ubuntu bionic (linux_gcc64)
+      script:
+        - docker-compose run bionic scripts/build-qbs-with-cmake.sh
+
+    - <<: *build-on-bionic
       name: With QMake on Ubuntu bionic (linux_gcc64)
       env:
         BUILD_OPTIONS="CONFIG+=ccache"
