Initial support for GitHub Actions
This commit adds jobs similar to what we have in Travis. Some tests are
disabled when running on GitHub since they do not pass for various
reasons. Note that those tests are usually skipped on Travis due to
missing dependencies.

Change-Id: Icec96dc22e2939d12568d2de1f1a4537c35977ad
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ x-default-service: &linux
     - BUILD_OPTIONS
     - QTEST_FUNCTION_TIMEOUT
     - QBS_AUTOTEST_PROFILE
+    - QBS_TEST_SOURCE_ROOT
+    - WITH_TESTS
   volumes:
     - .:/qbs
     - ~/.ccache:/home/devel/.ccache
