cmake: Fix target names
It should be 'qbscore', not 'corelib'. Same for the static logging
library.

This amends b67b08f1c2c.

Change-Id: I3b79ce75168360f8708b143471f0b4c223b2f5fd
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/app/qbs-setup-android/CMakeLists.txt
+++ b/src/app/qbs-setup-android/CMakeLists.txt
@@ -7,6 +7,6 @@ set(SOURCES
     )
 
 add_qbs_app(qbs-setup-android
-    DEPENDS corelib logginglib
+    DEPENDS qbscore qbslogging
     SOURCES ${SOURCES}
     )
