--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -417,6 +417,7 @@ add_qbs_library(qbscore
     DEFINES
         "QBS_VERSION=\"${QBS_VERSION}\""
         "QBS_RELATIVE_LIBEXEC_PATH=\"${QBS_RELATIVE_LIBEXEC_PATH}\""
+        "QBS_LIBRARY"
         ${QBS_UNIT_TESTS_DEFINES}
         ${QBS_PROJECT_FILE_UPDATES_DEFINES}
     DEPENDS
