cmake: rename qbslogging -> qbsconsolelogger
...to match the Qbs build

Change-Id: Ib17d9625bf06d2eed69f51cc0e6e6cbe7ba99085
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/app/config-ui/CMakeLists.txt
+++ b/src/app/config-ui/CMakeLists.txt
@@ -14,6 +14,6 @@ if(APPLE)
 endif()
 
 add_qbs_app(qbs-config-ui
-    DEPENDS qbscore qbslogging Qt5::Widgets ${MACOS_FRAMEWORKS}
+    DEPENDS qbscore qbsconsolelogger Qt5::Widgets ${MACOS_FRAMEWORKS}
     SOURCES ${SOURCES} ${MACOS_SOURCES}
     )
