--- a/src/app/qbs-create-project/CMakeLists.txt
+++ b/src/app/qbs-create-project/CMakeLists.txt
@@ -5,6 +5,6 @@ set(SOURCES
     )
 
 add_qbs_app(qbs-create-project
-    DEPENDS qbscore qbslogging
+    DEPENDS qbscore qbsconsolelogger
     SOURCES ${SOURCES}
     )
