--- a/src/app/qbs-setup-android/CMakeLists.txt
+++ b/src/app/qbs-setup-android/CMakeLists.txt
@@ -7,6 +7,6 @@ set(SOURCES
     )
 
 add_qbs_app(qbs-setup-android
-    DEPENDS qbscore qbslogging
+    DEPENDS qbscore qbsconsolelogger
     SOURCES ${SOURCES}
     )
