docker: Fix 'duplicate mount point' error on Linux
Change-Id: Iba015e05e641e09ee64262d072a3980fcf2e9965
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Richard Weickelt <richard@weickelt.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,10 @@ services:
       - BUILD_OPTIONS
       - WITH_DOCS
     volumes:
-      - .:C:\qbs
-      - ~/.ccache:C:\.ccache
+      - type: bind
+        source: .
+        target: C:\qbs
+      - type: bind
+        source: ~/.ccache
+        target: C:\.ccache
     network_mode: nat
