--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ x-default-service: &linux
     - QTEST_FUNCTION_TIMEOUT
     - QBS_AUTOTEST_PROFILE
     - QBS_TEST_SOURCE_ROOT
+    - WITH_ARCHIVE
     - WITH_TESTS
   volumes:
     - .:/qbs
