GitHub actions: fix ccache restore-keys on Linux
This amends 98c367927

Change-Id: I1a205f418943d949c6574c18a9f083db7a5ac998
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         path: ~/.ccache
         key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-        restore-keys: ${{ matrix.config.cacheid }}
+        restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
     - name: Pull the Bionic Image
       run: docker-compose pull bionic
     - name: Print ccache stats
@@ -93,7 +93,7 @@ jobs:
       with:
         path: ~/.ccache
         key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-        restore-keys: ${{ matrix.config.cacheid }}
+        restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
     - name: Pull the Bionic Image
       run: docker-compose pull bionic
     - name: Print ccache stats
