--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,33 +17,33 @@ x-default-service: &linux
       - SYS_PTRACE
 
 services:
-  bionic:
+  focal:
     << : *linux
-    hostname: bionic
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic-5.15.0_1.15.1-2
+    hostname: focal
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-5.15.0_1.15.1-0
     build:
-      dockerfile: docker/bionic/Dockerfile
+      dockerfile: docker/focal/Dockerfile
       context: .
       args:
         QT_VERSION: 5.15.0
         QTCREATOR_VERSION: 4.11.2
 
-  bionic-android-513:
+  focal-android-513:
     << : *linux
-    hostname: bionic-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic-android-5.13.2-4
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-0
     build:
-      dockerfile: docker/bionic/test-android.Dockerfile
+      dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.13.2
 
-  bionic-android-514:
+  focal-android-514:
     << : *linux
-    hostname: bionic-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic-android-5.14.0-4
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-0
     build:
-      dockerfile: docker/bionic/test-android.Dockerfile
+      dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.14.0
@@ -51,7 +51,7 @@ services:
   focal-baremetal:
     << : *linux
     hostname: focal-baremetal
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-baremetal-1
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-baremetal-2
     build:
       dockerfile: docker/focal/test-baremetal.Dockerfile
       context: .
