GitHub actions: fix the fallbackModuleProvider test
The pkg-config executable found in PATH is broken and doesn't work at
all. Fix that by installing the working version from choco.

Change-Id: I3c3bdeba2215dd75685195375de586f0f2e67c82
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -395,6 +395,8 @@ jobs:
     - name: Update PATH
       run: echo ::add-path::./release/install-root/bin
       shell: bash
+    - name: Install required packages
+      run: choco install -y pkgconfiglite
     - name: Install Qt
       uses: ./.github/actions/download-qt
       with:
